--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ apply plugin: "kotlin-kapt"
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "io.jeffchang.splitdiff"
+        applicationId "io.jeffchang.giphysearch"
         minSdkVersion 22
         targetSdkVersion 28
         versionCode 1
@@ -32,7 +32,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation project(path: ':base')
-    implementation project(path: ':review')
+    implementation project(path: ':giphy')
 
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.8.0")
     
