--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext {
         kotlin_version = '1.3.21'
         dagger_version = '2.16'
-        picasso_version = '2.71828'
+        glide_version = '4.9.0'
     }
     repositories {
         google()
