--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         kotlin_version = '1.3.21'
         dagger_version = '2.16'
         glide_version = '4.9.0'
+        lifecycle_version = '2.0.0'
     }
     repositories {
         google()
